# meridian-channel

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BEHAVIORS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  HANDOFF.md  IMPLEMENTATION-GAPS.md  INSTALL.md  MERIDIAN-CHANNEL.md  Makefile  README.md  VISION.md  WHAT-TO-REMOVE.md  mars.toml  meridian.toml  pyproject.toml
.agents/agents/: __meridian-orchestrator.md  __meridian-primary.md  __meridian-subagent.md  agent.md  architect.md  browser-tester.md  dev-orchestrator.md  dev-runner.md  frontend-designer.md  orchestrator.md  planner.md  researcher.md  reviewer.md  smoke-tester.md  supervisor.md
.claude/: settings.json
.claude/agents/: orchestrator.md
.github/workflows/: meridian-ci.yml  meridian-marker-gates.yml  publish-pypi.yml
.meridian/: .gitignore  agents.toml  config.toml
.meridian/fs/: agent-skill-design-principles.md  codex-session-management.md  mars-agents-feature-gaps.md  model-catalog-and-resolution.md  orphan-investigation.md  overview.md
.meridian/kb/: overview.md
.meridian/work/: bug-primary-spawn-unlabeled.md  bug-spawn-wait-false-failure.md  claude-code-session-management.md  decisions.md  lifecycle-unification-plan.md  opencode-fork-research.md  review-consistency.md  review-solid.md  review-state-safety.md  solid-audit-report.md  solid-review-session-changes.md
backlog/: README.md  agent-package-management-redesign.md  bugs.md  config-layer-unification.md  improvements.md  migration-notes.md  model-catalog-improvements.md  plan-cleanup-notes.md  spawn-parent-child-tracking.md  tech-debt.md
backlog/_reference/: migration-gotchas.md
backlog/archive/: 2026-03-03-backlog-execution.md  2026-03-07-bugs.md  2026-03-07-improvements.md
docs/: ARCHITECTURE.md  chat.md  cli-reference.md  codex-tui-passthrough.md  commands.md  configuration.md  extension-authoring.md  extensions.md  getting-started.md  harness-adapters.md  hooks.md  mcp-tools.md  plugin-api.md  safety.md  spaces.md  troubleshooting.md  workspaces.md
docs/_internal/: ARCHITECTURE.md  developer-terminology.md  development-install.md  harness-adapters.md
frontend/: .gitignore  package.json  test-chat.html  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
migrations/: AGENTS.md
plans/: architecture-simplification-v2.md  architecture-simplification.md  backlog.md  opencode-compaction-plugin.md  primary-cli-redesign.md  unified-launch-refactor.md
prompts/: backend-implementation.md
scripts/: check-launch-invariants.sh  check.sh  quality-issues.sh  release.sh
tests/: AGENTS.md  SMOKE_TESTING.md  __init__.py  _audit.md  conftest.py  mock_harness.py  smoke_test.py  test_app_agui_phase3.py  test_app_server.py  test_async_from_sync.py  test_cli_bootstrap.py  test_cli_config.py  test_cli_main.py  test_cli_mars.py  test_cli_output_modes.py  test_cli_run_background.py  test_cli_run_stats.py  test_cli_run_stream_flags.py  test_cli_run_wait_multi.py  test_cli_skills_models.py  test_cli_slice3.py  test_cli_smoke.py  test_cli_spawn.py  test_cli_spawn_background.py  test_cli_spawn_cancel.py  test_cli_spawn_plumbing.py  test_cli_ux_fixes.py  test_config_catalog.py  test_config_hierarchy.py  test_config_s4b_env_overrides.py  test_config_settings.py  test_config_slice2.py  test_config_slice2_propagation.py  test_control_socket.py  test_default_agent_profiles.py  test_depth_slice4.py  test_dry_run_no_write_slice1a.py  test_exec_errors_slice5a.py  test_exec_slice4.py  test_exec_slice5a.py  (+51 more)
(+1435 files in other folders)
